--- a/content.scss
+++ b/content.scss
@@ -14,5 +14,5 @@
   padding-bottom: 69px;
   border-right-width: 47px;
   font-size: 61px;
-  border-top-width: 40px;
+  border-bottom-width: 23px;
 }
