--- a/content.css
+++ b/content.css
@@ -23,5 +23,5 @@
   border-top-width: 71px;
   border-bottom-width: 58px;
   margin-bottom: 47px;
-  line-height: 27px;
+  border-bottom-width: 46px;
 }
